kube-service-external-dns.yaml
apiVersion: v1
kind: Service
metadata:
  name: spring-boot-service-via-nginx
  namespace: development
  annotations:
    external-dns.alpha.kubernetes.io/hostname: saffa.env.alfaid.co.
spec:
  ports:
  - port: 80
    targetPort: 8888
    name: http
  selector:
    app: spring-boot-app
