kube-deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: {NAME_SPACE}
---
apiVersion: apps/v1beta1 # for versions before 1.8.0 use apps/v1beta1
kind: Deployment
metadata:
  name: {APP_NAME}-deployment
  namespace: {NAME_SPACE}
spec:
  selector:
    matchLabels:
      app: {APP_NAME}
  replicas: 1 # tells deployment to run 3 pods matching the template
  template: # create pods using pod definition in this template
    metadata:
      labels:
        app: {APP_NAME}
    spec:
      containers:
      - name: {APP_NAME}
        image: haris22/hello:latest
        ports:
        - containerPort: 8888
          name: server
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: {APP_NAME}-ingress
  namespace: development
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: {DOMAIN}.alfaid.co
      http:
        paths:
          - backend:
              serviceName: {APP_NAME}-svc
              servicePort: 80
            path: /
---
apiVersion: v1
kind: Service
metadata:
  name: {APP_NAME}-svc
  namespace: {NAME_SPACE}
  annotations:
    external-dns.alpha.kubernetes.io/hostname: {DOMAIN}.alfaid.co.
spec:
  ports:
    - port: 80
      targetPort: 8888
      name: http
  selector:
    app: {APP_NAME}
