kube-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: api-ingresse-test
  namespace: development
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: saffa.env.alfaid.co
    http:
      paths:
      - backend:
          serviceName: spring-boot-service-via-nginx
          servicePort: 80
        path: /
